--- a/petfax/templates/pets/index.html
+++ b/petfax/templates/pets/index.html
@@ -16,7 +16,7 @@
                 <div class="pet">
                     <h2>{{ pet.name}}</h2>
                     <img src="{{ pet.pet_photo }}" alt="{{ pet.name }}">
-                    <a href="/pets/{{ pet.id }}">Learn more</a>
+                    <a href="/pets/{{ pet.pet_id }}">Learn more</a>
                 </div>
                 {% endfor %}
             </div>
