--- a/petfax/templates/facts/index.html
+++ b/petfax/templates/facts/index.html
@@ -10,6 +10,10 @@
 <body>
     <div class="container">
         <h1>UserFax</h1>
+        {% for fact in facts %}
+            <h4>Submitted by {{ fact.submitter }}</h4>
+            {{ fact.fact }}
+        {% endfor %}
     </div>
 </body>
 </html>
