--- a/petfax/templates/pets/show.html
+++ b/petfax/templates/pets/show.html
@@ -25,7 +25,7 @@
       </div>
       <div class="pets-container">
         <div class="show-pet">
-          <img
+          <img class="pet-photo"
             src="{{ pet.pet_photo }}"
             alt="{{ pet.name }}"
           />
